2008-05-31  Bruno Haible  <bruno@clisp.org>

	* src/m4/shm-rmid.m4 (CL_SHM_RMID): Choose more distant addresses,
	so that the test succeeds on Linux.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* src/m4/select.m4 (RL_SELECT): Remove macro.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* modules/regexp/configure.in: Require autoconf >= 2.58. Invoke
	AC_C_RESTRICT instead of gl_C_RESTRICT.
	* m4/restrict.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_RAISE invocation.
	* unix.d (raise): Assume 'raise' exists.
	* spvw_sigpipe.d (sigpipe_handler): Likewise.
	* m4/raise.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_OPENFLAGS invocation.
	* unix.d: Assume O_RDWR etc. is defined in <fcntl.h>.
	* m4/filecharset.m4 (CL_FILECHARSET): Likewise.
	* m4/general.m4 (CL_FFCALL_COMMON_TRAMPOLINE): Likewise.
	* m4/ioctl.m4 (CL_IOCTL): Likewise.
	* m4/mmap.m4 (CL_MMAP): Likewise.
	* m4/poll.m4 (CL_POLL): Likewise.
	* m4/select.m4 (CL_SELECT): Likewise.
	* m4/openflags.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_OFFSETOF invocation.
	* m4/intparam.m4 (CL_INTPARAM_ALIGNOF): Don't require CL_OFFSETOF.
	Include <stddef.h> always.
	* lispbibl.d: Include <stddef.h> always.
	(offsetof): Don't redefine, use if it is defined.
	* m4/offsetof.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	Remove SunOS 4 support.
	* lispbibl.d (SUN386, SUN3, UNIX_SUNOS4): Remove macros.
	(MULTIMAP_MEMORY_VIA_FILE, hardware_addressbus_mask, SPVW_MIXED):
	Update.
	* unix.d: Drop UNIX_SUNOS4 conditional.
	* spvw.d (init_memory): Likewise.
	* misc.d (MACHINE-TYPE, MACHINE-VERSION): Likewise.
	* _distmakefile (CC): Likewise.
	* stream.d (MAKE-WINDOW, CLOSE-WINDOW): Drop SUN3 conditional.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	Remove NeXTstep support.
	* SUMMARY: Remove mention of NeXTstep.
	* lispbibl.d (UNIX_NEXTSTEP, NEXTSTEP_CHS): Remove macros.