@@ -108,7 +108,7 @@ CL_SIGNAL_BLOCK_OTHERS dnl DEFS SIGNAL_NEED_UNBLOCK_OTHERS
 CL_SIGACTION           dnl DEFS HAVE_SIGACTION
 CL_SIGACTION_REINSTALL dnl DEFS SIGACTION_NEED_REINSTALL
 CL_SIGACTION_UNBLOCK   dnl DEFS SIGACTION_NEED_UNBLOCK
-CL_SIGINTERRUPT        dnl DEFS HAVE_SIGINTERRUPT, HAVE_SIGVEC
+CL_SIGINTERRUPT        dnl DEFS HAVE_SIGINTERRUPT
 CL_PERROR              dnl DEFS HAVE_PERROR_DECL
 AC_CHECK_FUNCS(strerror sysconf getdtablesize memset setsid setpgid fchmod dnl
 fsync flock gethostent shutdown usleep ualarm setitimer nice ftime realpath dnl
