@@ -1,5 +1,5 @@
 dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2003 Free Software Foundation, Inc.
+dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -13,7 +13,4 @@ AC_PREREQ(2.57)
 AC_DEFUN([CL_SIGINTERRUPT],
 [AC_REQUIRE([CL_SIGACTION])dnl
 AC_CHECK_FUNCS(siginterrupt)dnl
-if test "$ac_cv_func_siginterrupt" = yes -a "$ac_cv_func_sigaction" = yes; then
-AC_CHECK_FUNCS(sigvec)dnl
-fi
 ])
