@@ -1,5 +1,10 @@
 2008-05-31  Bruno Haible  <bruno@clisp.org>
 
+	* m4/siginterrupt.m4 (CL_SIGINTERRUPT): Don't test for sigvec.
+	* unixaux.d (siginterrupt): Remove sigvec based emulation.
+
+2008-05-31  Bruno Haible  <bruno@clisp.org>
+
 	* src/m4/shm-rmid.m4 (CL_SHM_RMID): Choose more distant addresses,
 	so that the test succeeds on Linux.
 
